tests/fixtures/valid/run_array.nl
fn main -> i64
    let values array<i64> = [2, 4, 6]
    values[2]
