tests/fixtures/invalid/array_index_type_mismatch.nl
fn main -> i64
    let values array<i64> = [1, 2]
    values[true]
